// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple snapshot tests Default cell snapshot 1`] = `
<div>
  <div
    class="Cell"
  >
    <div
      style="width: 50px; height: 50px; border: 1px solid black;"
    >
      <div
        id="0"
        style="text-align: center; position: relative; top: 30%;"
      >
        [
        0
        ]
      </div>
    </div>
  </div>
</div>
`;

exports[`simple snapshot tests nonDefaultID cell snapshot 1`] = `
<div>
  <div
    class="Cell"
  >
    <div
      style="width: 50px; height: 50px; border: 1px solid black;"
    >
      <div
        id="123"
        style="text-align: center; position: relative; top: 30%;"
      >
        [
        123
        ]
      </div>
    </div>
  </div>
</div>
`;
